[package]
name = "weak-alloc"
version = "0.1.0"
authors = ["Badel2 <2badel2@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
description = """
A custom allocator that can be given ownership of data, returning a WeakRef
"""
repository = "https://github.com/Badel2/weak-alloc"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
weak-list2 = { version = "0.1", path = "../weak-list" }
