[package]
name = "weak-list2"
version = "0.1.0"
edition = "2021"
authors = ["Badel2 <2badel2@gmail.com>"]
license = "GPL-3.0"
description = """
Doubly linked, heterogeneous, list of Arc-like nodes that can be used to implement a least recently used cache.
"""
repository = "https://github.com/Badel2/weak-alloc"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "weak_list"

[dependencies]
once_cell = "1.13"
